# hashpool

./: .gitignore  AGENTS.md  ARCHITECTURE_REFACTOR_PLAN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEFERRED_SHARE_RESPONSE.md  DEPLOYMENT_PLAN.md  DEV_PLAN_STATS_SNAPSHOT.md  EXTENSION_MESSAGE.md  EXTENSION_MIGRATION_PLAN.md  PROMPT_LOOP.md  QUICK_DEPLOY_PLAN.md  README.md  REAPPLY_PLAN.md  REBASE_NEXT.md  REBASE_NOTES.md  REBASE_SRI.md  REBASE_STRATEGY.md  ROLE_REFACTOR.md  SHIT_TO_FIX.md  SRI_BUGS.md  TLV_INFRASTRUCTURE_PLAN.md  WEB_ASSETS.md  bitcoin-node.nix  bitcoin.conf  cln.conf  devenv.nix  devenv.toml  flake.nix  justfile  sv2-tp.nix
ehash/: Cargo.toml
ehash/src/: extension_state.rs  interceptor.rs  interceptor_tests.rs  lib.rs  message_detector.rs
ehash/src/tlv/: error.rs  mod.rs
protocols/: Cargo.toml
protocols/ehash/: Cargo.toml
protocols/ehash/src/: keyset.rs  lib.rs  message_type.rs  quote.rs  sv2.rs  work.rs
protocols/v1/: Cargo.toml
protocols/v2/binary-sv2/serde-sv2/: Cargo.toml
protocols/v2/binary-sv2/serde-sv2/src/: error.rs  lib.rs
protocols/v2/channels-sv2/: Cargo.toml
protocols/v2/channels-sv2/src/server/: extended.rs  standard.rs
protocols/v2/const-sv2/src/: lib.rs
protocols/v2/extensions/cashu/: Cargo.toml
protocols/v2/extensions/cashu/src/: hash_computation.rs  lib.rs  message_utils.rs  negotiation.rs  tlv.rs
protocols/v2/handlers-sv2/: Cargo.toml
protocols/v2/parsers-sv2/: Cargo.toml
protocols/v2/parsers-sv2/src/: lib.rs
protocols/v2/roles-logic-sv2/: Cargo.toml
protocols/v2/roles-logic-sv2/src/: errors.rs  job_creator.rs  parsers.rs  routing_logic.rs  utils.rs
protocols/v2/roles-logic-sv2/src/channel_logic/: channel_factory.rs
protocols/v2/roles-logic-sv2/src/handlers/: mining.rs
protocols/v2/roles-logic-sv2/src/vardiff/: classic.rs  mod.rs
protocols/v2/subprotocols/common-messages/src/: lib.rs  setup_connection.rs
protocols/v2/subprotocols/mining/: Cargo.toml
protocols/v2/subprotocols/mining/src/: cashu.rs  lib.rs  mint_quote_notification.rs  open_channel.rs  submit_shares.rs
protocols/v2/subprotocols/mint-quote/: Cargo.toml
protocols/v2/subprotocols/mint-quote/src/: lib.rs  mint_quote_request.rs  mint_quote_response.rs  notification.rs
protocols/v2/subprotocols/stats-sv2/: Cargo.toml
protocols/v2/subprotocols/stats-sv2/src/: lib.rs
roles/: Cargo.toml
roles/jd-client/: Cargo.toml
roles/jd-client/src/lib/: downstream.rs  error.rs  utils.rs
roles/jd-client/src/lib/channel_manager/: downstream_message_handler.rs  jd_message_handler.rs  mod.rs  template_message_handler.rs  upstream_message_handler.rs
roles/jd-client/src/lib/downstream/: mod.rs
roles/jd-client/src/lib/job_declarator/: mod.rs
roles/jd-client/src/lib/template_receiver/: mod.rs
roles/jd-client/src/lib/upstream/: mod.rs
roles/jd-client/src/lib/upstream_sv2/: upstream.rs
roles/jd-server/: Cargo.toml
roles/jd-server/config-examples/: jds-config-local-example.toml
roles/jd-server/src/lib/: error.rs  mod.rs  stats_integration.rs  status.rs
roles/jd-server/src/lib/job_declarator/: message_handler.rs  mod.rs
roles/mining-proxy/src/lib/: upstream_mining.rs
roles/mint/: Cargo.toml
roles/mint/src/: main.rs
roles/mint/src/lib/: error.rs  message_types.rs  mod.rs
roles/mint/src/lib/mint_manager/: setup.rs
roles/mint/src/lib/sv2_connection/: connection.rs  frame_codec.rs  message_handler.rs  mod.rs  quote_processing.rs  state_machine.rs
roles/pool/: Cargo.toml
roles/pool-stats/: Cargo.toml
roles/pool-stats/src/: db.rs  main.rs  web.rs
roles/pool/src/: main.rs
roles/pool/src/lib/: config.rs  error.rs  mod.rs  monitoring.rs  stats.rs  stats_client.rs  stats_integration.rs  web.rs
roles/pool/src/lib/mining_pool/: message_handler.rs  mint_connection.rs  mod.rs  pending_shares.rs  quote_poller.rs  setup_connection.rs
roles/pool/src/lib/template_receiver/: mod.rs
roles/proxy-stats/: Cargo.toml
roles/proxy-stats/src/: main.rs  stats_handler.rs  web.rs
roles/roles-utils/config/: Cargo.toml
roles/roles-utils/config/src/: lib.rs
roles/roles-utils/mint-pool-messaging/: Cargo.toml
roles/roles-utils/mint-pool-messaging/src/: channel_manager.rs  lib.rs  message_codec.rs  message_hub.rs  sv2_frames.rs
roles/roles-utils/network-helpers/: Cargo.toml
roles/roles-utils/network-helpers/src/: noise_connection.rs  noise_stream.rs  plain_connection.rs
roles/roles-utils/quote-dispatcher/: Cargo.toml
roles/roles-utils/quote-dispatcher/src/: lib.rs
roles/roles-utils/stats/src/: stats_adapter.rs  stats_client.rs  stats_poller.rs
roles/roles-utils/stratum-translation/: Cargo.toml
roles/roles-utils/stratum-translation/src/: sv1_to_sv2.rs  sv2_to_sv1.rs
roles/roles-utils/web-assets/src/: icons.rs
roles/roles-utils/web-utils/src/: lib.rs
roles/stats-pool/: Cargo.toml
roles/stats-pool/src/: config.rs  db.rs  main.rs  stats_handler.rs  web.rs
roles/stats-proxy/: Cargo.toml
roles/stats-proxy/src/: api.rs  config.rs  db.rs  main.rs  stats_handler.rs  web.rs
roles/test-utils/mining-device/: Cargo.toml
roles/test-utils/mining-device-sv1/src/: client.rs
roles/test-utils/mining-device/src/lib/: mod.rs
roles/tests-integration/: Cargo.toml
roles/tests-integration/tests/common/: mod.rs
roles/translator/: Cargo.toml  README.md
roles/translator/config-examples/: tproxy-config-hosted-pool-example.toml  tproxy-config-local-jdc-example.toml  tproxy-config-local-pool-example.toml
roles/translator/src/: args.rs  main.rs
roles/translator/src/lib/: config.rs  error.rs  faucet_api.rs  io_task.rs  miner_stats.rs  mod.rs  monitoring.rs  proxy_config.rs  stats_client.rs  stats_integration.rs  status.rs  sv1_monitoring.rs  utils.rs  web.rs
roles/translator/src/lib/downstream_sv1/: diff_management.rs  downstream.rs  (+1 more)
roles/web-pool/: Cargo.toml
roles/web-pool/src/: config.rs  lib.rs  main.rs  web.rs
roles/web-pool/templates/: dashboard.html
roles/web-proxy/: Cargo.toml
roles/web-proxy/src/: config.rs  main.rs  prometheus.rs  web.rs
roles/web-proxy/templates/: miners.html  pool.html  wallet.html
(+176 files in other folders)
