[workspace]
members = [
    "roles",
    "roles/translator",
    "roles/pool",
    "roles/mint",
    "roles/mining-proxy",
    "roles/jd-server",
    "roles/jd-client",
    "roles/tests-integration",
    "roles/roles-utils/network-helpers",
    "roles/roles-utils/rpc",
    "common",
    "protocols",
    "protocols/v1",
    "protocols/fuzz-tests",
    "protocols/v2/codec-sv2",
    "protocols/v2/const-sv2",
    "protocols/v2/framing-sv2",
    "protocols/v2/noise-sv2",
    "protocols/v2/roles-logic-sv2",
    "protocols/v2/sv2-ffi",
    "protocols/v2/binary-sv2/binary-sv2",
    "protocols/v2/binary-sv2/serde-sv2",
    "protocols/v2/binary-sv2/no-serde-sv2/derive_codec",
    "protocols/v2/binary-sv2/no-serde-sv2/codec",
    "benches",
    "utils",
    "utils/buffer",
    "utils/key-utils",
    "utils/error-handling",
    "utils/bip32-key-derivation",
    "utils/message-generator"
] 