[workspace]

resolver="2"

members = [
    "ehash",
    "v1",
    "v2/channels-sv2",
    "v2/subprotocols/mint-quote",
    "v2/subprotocols/stats-sv2",
    "v2/roles-logic-sv2",
    "v2/parsers-sv2",
    "v2/handlers-sv2",
]


[patch.crates-io]
cashu           = { git = "https://github.com/cashubtc/cdk", rev = "5dd5b93a" }
cdk             = { git = "https://github.com/cashubtc/cdk", rev = "5dd5b93a" }
cdk-common      = { git = "https://github.com/cashubtc/cdk", rev = "5dd5b93a" }
cdk-http-client = { git = "https://github.com/cashubtc/cdk", rev = "5dd5b93a" }
cdk-signatory   = { git = "https://github.com/cashubtc/cdk", rev = "5dd5b93a" }
cdk-sql-common  = { git = "https://github.com/cashubtc/cdk", rev = "5dd5b93a" }
cdk-sqlite      = { git = "https://github.com/cashubtc/cdk", rev = "5dd5b93a" }

[profile.dev]
# Required by super_safe_lock
opt-level = 1

[profile.test]
# Required by super_safe_lock
opt-level = 1
