[workspace]
resolver="2"

members = [
    "pool",
    "web-proxy",
    "web-pool",
    "test-utils/mining-device",
    "test-utils/mining-device-sv1",
    "translator",
    "jd-client",
    "jd-server",
    "roles-utils/mint-pool-messaging",
    "roles-utils/share-hooks",
    # "roles-utils/pool-messages",  # TODO: Phase 2 - will be activated when mint role is enabled
    "roles-utils/web-assets",
    "roles-utils/stats-sv2",
    "roles-utils/network-helpers",
    "roles-utils/stratum-translation",
    "roles-utils/config",
    "roles-utils/config-helpers",
    "roles-utils/rpc",
    "mint",
    # "roles-utils/quote-dispatcher",  # TODO: Phase 3 - requires mint phase to be completed
    # "tests-integration",  # TODO: Deferred - requires jd-client and mining-proxy ports
]

[patch.crates-io]
channels_sv2    = { path = "../protocols/v2/channels-sv2" }
cashu           = { git = "https://github.com/cashubtc/cdk", rev = "742285cd" }
cdk             = { git = "https://github.com/cashubtc/cdk", rev = "742285cd" }
cdk-common      = { git = "https://github.com/cashubtc/cdk", rev = "742285cd" }
cdk-axum        = { git = "https://github.com/cashubtc/cdk", rev = "742285cd" }
cdk-mintd       = { git = "https://github.com/cashubtc/cdk", rev = "742285cd" }
cdk-http-client = { git = "https://github.com/cashubtc/cdk", rev = "742285cd" }
cdk-signatory   = { git = "https://github.com/cashubtc/cdk", rev = "742285cd" }
cdk-sql-common  = { git = "https://github.com/cashubtc/cdk", rev = "742285cd" }
cdk-sqlite      = { git = "https://github.com/cashubtc/cdk", rev = "742285cd" }

[profile.dev]
# Required by super_safe_lock
opt-level = 1

[profile.test]
# Required by super_safe_lock
opt-level = 1
