[package]
name = "ehash"
version = "0.1.0"
edition = "2021"
description = "Hashpool ehash utility functions"
license = "MIT OR Apache-2.0"

[dependencies]
binary_sv2 = { version = "^1.0.0", path = "../v2/binary-sv2/binary-sv2" }
mint_quote_sv2 = { version = "^1.0.0", path = "../v2/subprotocols/mint-quote" }
thiserror = "1"

[dev-dependencies]
