[package]
name = "ehash"
version = "0.1.0"
edition = "2021"
description = "Hashpool ehash utility functions"
license = "MIT OR Apache-2.0"
# NOTE: Tests disabled pending full ehash API implementation
# The test code has integration issues with binary-sv2 codec APIs that need to be resolved

[dependencies]
binary_sv2 = "5.0.1"
mint_quote_sv2 = { version = "^1.0.0", path = "../v2/subprotocols/mint-quote" }
thiserror = "1"
hex = "0.4"
serde_json = "1"
cdk-common = { git = "https://github.com/vnprc/cdk", rev = "9a634ec0" }
derive_codec_sv2 = "1.1.2"

[dev-dependencies]
rand = "0.8"
secp256k1 = "0.31"
