[package]
name = "mint"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
home = "0.5"
hyper = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bip39 = "2.0"
redis = { version = "0.23", features = ["tokio-comp"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcoin = { version= "0.32.2" }
uuid = { version = "1.7", features = ["v4"] }

cdk = { git = "https://github.com/vnprc/cdk.git", package = "cdk", rev = "7f603b5e" }
cdk-axum = { git = "https://github.com/vnprc/cdk.git", package = "cdk-axum", rev = "7f603b5e", features = ["redis"]}
cdk-mintd = { git = "https://github.com/vnprc/cdk.git", package = "cdk-mintd", rev = "7f603b5e" }
cdk-sqlite = { git = "https://github.com/vnprc/cdk.git", package = "cdk-sqlite", rev = "7f603b5e" }
cdk-redb = { git = "https://github.com/vnprc/cdk.git", package = "cdk-redb", rev = "7f603b5e" }
cdk-signatory = { git = "https://github.com/vnprc/cdk.git", package = "cdk-signatory", rev = "7f603b5e" }
toml = "0.8.22"

shared_config = { path = "../roles-utils/config" }
mint_pool_messaging = { path = "../roles-utils/mint-pool-messaging" }
