[package]
name = "mint"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
home = "0.5.11"
hyper = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bip39 = "2.0"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcoin = { version= "0.32.2" }
uuid = { version = "1.7", features = ["v4"] }
hex = "0.4"

cdk        = "0.16.0"
cdk-axum   = "0.16.0"
cdk-ehash  = { git = "https://github.com/vnprc/cdk-ehash", rev = "e53938e0" }
cdk-mintd  = "0.16.0"
cdk-sqlite = "0.16.0"
toml = "0.8.22"

shared_config = { path = "../roles-utils/config" }
mint_pool_messaging = { path = "../roles-utils/mint-pool-messaging" }
network_helpers_sv2 = { path = "../roles-utils/network-helpers" }
roles_logic_sv2 = { path = "../../protocols/v2/roles-logic-sv2" }
codec_sv2 = "4.0.1"
noise_sv2 = "1.4.1"
mining_sv2 = "7.0.0"
binary_sv2 = "5.0.1"
mint_quote_sv2 = { path = "../../protocols/v2/subprotocols/mint-quote" }
const_sv2 = "4.0.1"
common_messages_sv2 = "6.0.2"
ehash = { path = "../../protocols/ehash" }
key-utils = { path = "../../utils/key-utils" }
async-channel = "1.8.0"
