[package]
name = "pool_sv2"
version = "0.1.2"
authors = ["The Stratum V2 Developers"]
edition = "2018"
description = "SV2 pool role"
documentation = "https://docs.rs/pool_sv2"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]


[lib]
name = "pool_sv2"
path = "src/lib/mod.rs"

[dependencies]
stratum-common = { version = "1.0.0", path = "../../common" }
async-channel = "1.5.1"
binary_sv2 = { version = "^1.0.0", path = "../../protocols/v2/binary-sv2/binary-sv2" }
buffer_sv2 = { version = "^1.0.0", path = "../../utils/buffer" }
codec_sv2 = { version = "^1.0.1", path = "../../protocols/v2/codec-sv2", features = ["noise_sv2"] }
const_sv2 = { version = "^3.0.0", path = "../../protocols/v2/const-sv2" }
network_helpers_sv2 = { version = "2.0.0", path = "../roles-utils/network-helpers", features =["with_tokio","with_buffer_pool"] }
noise_sv2 = { version = "1.1.0", path = "../../protocols/v2/noise-sv2" }
rand = "0.8.4"
roles_logic_sv2 = { version = "^1.0.0", path = "../../protocols/v2/roles-logic-sv2" }
serde = { version = "1.0.89", features = ["derive", "alloc"], default-features = false }
tokio = { version = "1", features = ["full"] }
ext-config = { version = "0.14.0", features = ["toml"], package = "config" }
toml = "0.8"
tracing = { version = "0.1" }
tracing-subscriber = "0.3"
async-recursion = "1.0.0"
error_handling = { version = "1.0.0", path = "../../utils/error-handling" }
nohash-hasher = "0.2.0"
key-utils = { version = "^1.0.0", path = "../../utils/key-utils" }
bip39 = { version = "2.0", features = ["rand"] }
mining_sv2 = { version = "^2.0.0", path = "../../protocols/v2/subprotocols/mining" }
mint_quote_sv2 = { version = "^1.0.0", path = "../../protocols/v2/subprotocols/mint-quote" }
bitcoin = { version= "0.32.2" }
cdk = { git = "https://github.com/vnprc/cdk", rev = "ea12e843" }
bitcoin_hashes = { version = "0.16", features = ["serde"] }
shared_config = { path = "../roles-utils/config" }
mint_pool_messaging = { path = "../roles-utils/mint-pool-messaging" }
quote-dispatcher = { path = "../roles-utils/quote-dispatcher" }
web_assets = { path = "../roles-utils/web-assets" }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde_json = "1.0"
bytes = "1.0"
futures = "0.3"
ehash = { path = "../../protocols/ehash" }
hex = "0.4.3"
stats = { path = "../roles-utils/stats" }
pool-stats = { path = "../roles-utils/pool-stats" }


[dev-dependencies]

[features]
test_only_allow_unencrypted = []
MG_reject_auth = []
