[package]
name = "proxy-stats"
version = "0.1.0"
edition = "2021"

[lib]
name = "proxy_stats"
path = "src/lib.rs"

[[bin]]
name = "proxy-stats"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# Web assets
web_assets = { path = "../roles-utils/web-assets" }
