[package]
name = "stats_pool"
version = "0.1.0"
edition = "2021"

[lib]
name = "stats_pool"
path = "src/lib.rs"

[[bin]]
name = "stats_pool"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
roles_logic_sv2 = { path = "../../protocols/v2/roles-logic-sv2" }

# Web assets
web_assets = { path = "../roles-utils/web-assets" }
