[package]
name = "translator_sv2"
version = "2.0.0"
authors = ["The Stratum V2 Developers"]
edition = "2021"
description = "SV1 to SV2 translation proxy"
documentation = "https://docs.rs/translator_sv2"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol", "translator", "proxy"]

[lib]
name = "translator_sv2"
path = "src/lib/mod.rs"

[[bin]]
name = "translator_sv2"
path = "src/main.rs"

[dependencies]
stratum-common = { path = "../../common" }
async-channel = "1.5.1"
buffer_sv2 = "3.0.0"
network_helpers_sv2 = { path = "../roles-utils/network-helpers", features=["with_buffer_pool", "sv1"] }
stratum_translation = { path = "../roles-utils/stratum-translation" }
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
tokio = { version = "1.44.1", features = ["full"] }
ext-config = { version = "0.14.0", features = ["toml"], package = "config" }
tracing = { version = "0.1" }
v1 = { path = "../../protocols/v1", package="sv1_api" }
key-utils = { path = "../../utils/key-utils" }
clap = { version = "4.5.39", features = ["derive"] }
config_helpers_sv2 = { path = "../roles-utils/config-helpers" }
shared_config = { path = "../roles-utils/config" }
stats-sv2 = { path = "../roles-utils/stats-sv2" }
cdk        = "0.15.1"
cdk-sqlite = "0.15.1"
bip39 = "2.0"
anyhow = "1.0"
binary_sv2 = "5.0.1"
bitcoin = "0.32.5"
codec_sv2 = { version = "4.0.1", features = ["noise_sv2", "with_buffer_pool"] }
framing_sv2 = "6.0.1"
noise_sv2 = "1.4.1"
mint_quote_sv2 = { path = "../../protocols/v2/subprotocols/mint-quote" }
hex = "0.4"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
axum = "0.8"


[dev-dependencies]
sha2 = "0.10.6"
