[package]
name = "translator_sv2"
version = "2.0.0"
authors = ["The Stratum V2 Developers"]
edition = "2021"
description = "SV1 to SV2 translation proxy with CDK payment integration"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol", "translator", "proxy"]

[lib]
name = "translator_sv2"
path = "src/lib/mod.rs"

[[bin]]
name = "translator_sv2"
path = "src/main.rs"

[dependencies]
# sv2-apps translator base (stratum-apps v0.3.0, 2026-03-19)
stratum-apps = { path = "../../common/stratum-apps", features = ["translator"] }
async-channel = "1.5.1"
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec", "compat"] }
ext-config = { version = "0.14.0", features = ["toml"], package = "config" }
tracing = { version = "0.1" }
clap = { version = "4.5.39", features = ["derive"] }
hex = "0.4.3"
hotpath = "0.9"
dashmap = "6.1.0"
async-trait = "0.1"

# Hashpool CDK payment layer
cdk        = "0.15.1"
cdk-sqlite = "0.15.1"
bip39 = "2.0"
anyhow = "1.0"
bitcoin = "0.32.5"
mint_quote_sv2 = { path = "../../protocols/v2/subprotocols/mint-quote" }

# Faucet API server
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# HTTP client for monitoring polling (used when monitoring feature is enabled)
reqwest = { version = "0.12", features = ["json"], optional = true }

# Hashpool-specific metrics
stats-sv2 = { path = "../roles-utils/stats-sv2" }

[features]
default = ["monitoring"]
monitoring = ["stratum-apps/monitoring", "dep:reqwest"]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]

[dev-dependencies]
sha2 = "0.10.6"
