[package]
name = "handlers_sv2"
version = "0.1.0"
authors = ["The Stratum V2 Developers"]
edition = "2021"
description = "Sv2 Message handlers"
documentation = "https://docs.rs/handlers_sv2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stratum-mining/stratum"
homepage = "https://stratumprotocol.org"
keywords = ["stratum", "mining", "bitcoin", "protocol"]

[dependencies]
trait-variant = "0.1.2"
parsers_sv2 = { path = "../parsers-sv2", version = "^0.1.0" }
binary_sv2 = "5.0.1"
common_messages_sv2 = "6.0.2"
mining_sv2 = "7.0.0"
template_distribution_sv2 = "4.0.2"
job_declaration_sv2 = "6.0.0"
