[package]
name = "mint_pool_messaging"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["sync", "rt", "macros", "time"] }
tracing = "0.1"
async-trait = "0.1"
thiserror = "1.0"
mint_quote_sv2 = { path = "../../../protocols/v2/subprotocols/mint-quote" }
binary_sv2 = "5.0.1"
ehash = { path = "../../../protocols/ehash" }
