[package]
name = "stratum_translation"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Stratum V1 ↔ Stratum V2 translation utilities for reuse across proxies, apps, and firmware"

[lib]
name = "stratum_translation"
path = "src/lib.rs"

[dependencies]
binary_sv2 = "5.0.1"
bitcoin = "0.32.5"
mining_sv2 = "7.0.0"
channels_sv2 = "3.0.0"
roles_logic_sv2 = { path = "../../../protocols/v2/roles-logic-sv2" }
v1 = { path = "../../../protocols/v1", package = "sv1_api", version = "^2.0.0" }
tracing = "0.1"